[workspace]
members = [
    "crates/bin/guardrail3",
    "crates/domain/config",
    "crates/domain/modules",
    "crates/domain/report",
    "crates/domain/validation-model",
    "crates/domain/project-tree",
    "crates/domain/project-tree/assertions",
    "crates/ports/outbound/traits",
    "crates/adapters/inbound/cli",
    "crates/adapters/outbound/fs",
    "crates/adapters/outbound/report",
    "crates/adapters/outbound/tool-runner",
    "crates/shared/fs",
    "crates/app/arch-helpers",
    "crates/app/commands",
    "crates/app/core",
    "crates/app/rs/runtime",
    "crates/app/rs/placement",
    "crates/app/rs/family_selection",
    "crates/app/rs/family_selection/assertions",
    "crates/app/rs/family_mapper",
    "crates/app/rs/ast",
    "crates/app/rs/ast/assertions",
    "crates/app/rs/generate",
    "crates/app/rs/generate/assertions",
    "crates/app/hooks",
    "crates/app/ts",
    "crates/app/rs/families/arch/crates/runtime",
    "crates/app/rs/families/arch/crates/assertions",
    "crates/app/rs/families/arch/test_support",
    "crates/app/rs/families/cargo/crates/runtime",
    "crates/app/rs/families/cargo/crates/assertions",
    "crates/app/rs/families/cargo/crates/assertions_common",
    "crates/app/rs/families/cargo/test_support",
    "crates/app/rs/families/clippy/crates/runtime",
    "crates/app/rs/families/clippy/crates/assertions",
    "crates/app/rs/families/clippy/test_support",
    "crates/app/rs/families/code/crates/runtime",
    "crates/app/rs/families/code/crates/assertions",
    "crates/app/rs/families/code/test_support",
    "crates/app/rs/families/deps/crates/runtime",
    "crates/app/rs/families/deps/crates/assertions",
    "crates/app/rs/families/deps/test_support",
    "crates/app/rs/families/deny/crates/runtime",
    "crates/app/rs/families/deny/crates/assertions",
    "crates/app/rs/families/deny/test_support",
    "crates/app/rs/families/fmt/crates/runtime",
    "crates/app/rs/families/fmt/crates/assertions",
    "crates/app/rs/families/fmt/test_support",
    "crates/app/rs/families/garde/crates/runtime",
    "crates/app/rs/families/garde/crates/assertions",
    "crates/app/rs/families/garde/test_support",
    "crates/app/rs/families/hexarch/crates/runtime",
    "crates/app/rs/families/hexarch/crates/assertions",
    "crates/app/rs/families/hexarch/crates/assertions_common",
    "crates/app/rs/families/hexarch/test_support",
    "crates/app/rs/families/hooks-rs",
    "crates/app/rs/families/hooks-rs/assertions",
    "crates/app/rs/families/hooks-rs/test_support",
    "crates/app/rs/families/hooks-shared",
    "crates/app/rs/families/hooks-shared/assertions",
    "crates/app/rs/families/libarch/crates/runtime",
    "crates/app/rs/families/libarch/crates/assertions",
    "crates/app/rs/families/libarch/test_support",
    "crates/app/rs/families/release",
    "crates/app/rs/families/release/assertions",
    "crates/app/rs/families/release/test_support",
    "crates/app/rs/families/test/crates/runtime",
    "crates/app/rs/families/test/crates/assertions",
    "crates/app/rs/families/test/test_support",
    "crates/app/rs/families/toolchain/crates/runtime",
    "crates/app/rs/families/toolchain/crates/assertions",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
garde = { version = "0.22", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }

[profile.mutants]
inherits = "dev"
opt-level = 0
debug = false

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_debug_implementations = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
empty_line_after_doc_comments = "allow"
single_match_else = "allow"
ref_option_ref = "allow"
trivially_copy_pass_by_ref = "allow"
multiple_crate_versions = "allow"
