[package]
name = "guardrail3-rs-family-runner-policy"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
guardrail3-rs-app-types = { path = "../../types/app-types" }
g3rs-workspace-crawl.workspace = true
g3rs-clippy-config-checks.workspace = true
g3rs-clippy-filetree-checks.workspace = true
g3rs-clippy-ingestion.workspace = true
g3rs-deny-config-checks.workspace = true
g3rs-deny-filetree-checks.workspace = true
g3rs-deny-ingestion.workspace = true

[features]
default = ["api"]
api = []

[package.metadata.guardrail3]
shared = true

[lints]
workspace = true
