[package]
name = "guardrail3-rs-family-runner-test"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
guardrail3-rs-app-types = { path = "../../types/app-types" }
g3-workspace-crawl.workspace = true
g3rs-test-config-checks.workspace = true
g3rs-test-file-tree-checks.workspace = true
g3rs-test-ingestion.workspace = true
g3rs-test-source-checks.workspace = true

[features]
default = ["api"]
api = []

[package.metadata.guardrail3]
shared = true

[lints]
workspace = true
