[package]
name = "guardrail3-ts-family-runner-config"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
guardrail3-ts-app-types = { path = "../../types/app-types" }
g3-workspace-crawl.workspace = true
g3ts-eslint-config-checks.workspace = true
g3ts-eslint-ingestion.workspace = true
g3ts-tsconfig-config-checks.workspace = true
g3ts-tsconfig-ingestion.workspace = true
g3ts-package-config-checks.workspace = true
g3ts-package-ingestion.workspace = true
g3ts-npmrc-config-checks.workspace = true
g3ts-npmrc-ingestion.workspace = true
g3ts-jscpd-config-checks.workspace = true
g3ts-jscpd-ingestion.workspace = true

[features]
default = ["api"]
api = []

[package.metadata.guardrail3]
shared = true

[lints]
workspace = true
