[package]
name = "guardrail3-ts-family-runner-structure"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
guardrail3-ts-app-types = { path = "../../types/app-types" }
g3-workspace-crawl.workspace = true
g3ts-astro-content-config-checks.workspace = true
g3ts-astro-content-file-tree-checks.workspace = true
g3ts-astro-content-ingestion.workspace = true
g3ts-astro-mdx-config-checks.workspace = true
g3ts-astro-mdx-ingestion.workspace = true
g3ts-astro-i18n-config-checks.workspace = true
g3ts-astro-i18n-ingestion.workspace = true
g3ts-astro-seo-config-checks.workspace = true
g3ts-astro-seo-ingestion.workspace = true
g3ts-astro-setup-config-checks.workspace = true
g3ts-astro-setup-file-tree-checks.workspace = true
g3ts-astro-setup-ingestion.workspace = true
g3ts-astro-state-file-tree-checks.workspace = true
g3ts-astro-state-ingestion.workspace = true
g3ts-arch-config-checks.workspace = true
g3ts-arch-file-tree-checks.workspace = true
g3ts-arch-ingestion.workspace = true
g3ts-arch-source-checks.workspace = true
g3ts-apparch-config-checks.workspace = true
g3ts-apparch-ingestion.workspace = true
g3ts-apparch-source-checks.workspace = true

[features]
default = ["api"]
api = []

[package.metadata.guardrail3]
shared = true

[lints]
workspace = true
