[package]
name = "guardrail3-app-hooks"
version = "0.0.0"
edition = "2024"

[lib]
path = "mod.rs"

[lints]
workspace = true

[features]
default = ["all"]
all = ["api"]
api = []

[dependencies]
guardrail3_app_core = { package = "guardrail3-app-core", path = "../core" }
guardrail3_app_rs_family_view = { package = "guardrail3-app-rs-family-view", path = "../rs/family_view" }
guardrail3_app_rs_family_hooks_shared = { package = "guardrail3-app-rs-family-hooks-shared", path = "../rs/families/hooks-shared" }
guardrail3_domain_project_tree = { package = "guardrail3-domain-project-tree", path = "../../domain/project-tree" }
guardrail3_domain_report = { package = "guardrail3-domain-report", path = "../../domain/report" }
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../ports/outbound/traits" }
serde_json = "1"
