[package]
name = "guardrail3-app-rs-runtime"
version = "0.0.0"
edition = "2024"

[lib]
path = "runtime.rs"

[lints]
workspace = true

[dependencies]
guardrail3_app_core = { package = "guardrail3-app-core", path = "../core" }
guardrail3_domain_config = { package = "guardrail3-domain-config", path = "../../domain/config" }
guardrail3_domain_project_tree = { package = "guardrail3-domain-project-tree", path = "../../domain/project-tree" }
guardrail3_domain_report = { package = "guardrail3-domain-report", path = "../../domain/report" }
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../ports/outbound/traits" }
guardrail3_validation_model = { package = "guardrail3-domain-validation-model", path = "../../domain/validation-model" }
guardrail3_app_rs_family_arch = { package = "guardrail3-app-rs-family-arch", path = "families/arch/crates/runtime" }
guardrail3_app_rs_family_cargo = { package = "guardrail3-app-rs-family-cargo", path = "families/cargo/crates/runtime" }
guardrail3_app_rs_family_clippy = { package = "guardrail3-app-rs-family-clippy", path = "families/clippy/crates/runtime" }
guardrail3_app_rs_family_code = { package = "guardrail3-app-rs-family-code", path = "families/code/crates/runtime" }
guardrail3_app_rs_family_deny = { package = "guardrail3-app-rs-family-deny", path = "families/deny/crates/runtime" }
guardrail3_app_rs_family_deps = { package = "guardrail3-app-rs-family-deps", path = "families/deps" }
guardrail3_app_rs_family_fmt = { package = "guardrail3-app-rs-family-fmt", path = "families/fmt/crates/runtime" }
guardrail3_app_rs_family_garde = { package = "guardrail3-app-rs-family-garde", path = "families/garde" }
guardrail3_app_rs_family_hexarch = { package = "guardrail3-app-rs-family-hexarch", path = "families/hexarch/crates/runtime" }
guardrail3_app_rs_family_hooks_shared = { package = "guardrail3-app-rs-family-hooks-shared", path = "families/hooks-shared" }
guardrail3_app_rs_family_release = { package = "guardrail3-app-rs-family-release", path = "families/release" }
guardrail3_app_rs_family_test = { package = "guardrail3-app-rs-family-test", path = "families/test/crates/runtime" }
guardrail3_app_rs_family_toolchain = { package = "guardrail3-app-rs-family-toolchain", path = "families/toolchain/crates/runtime" }
guardrail3_app_rs_family_mapper = { package = "guardrail3-app-rs-family-mapper", path = "family_mapper" }
guardrail3_app_rs_family_selection = { package = "guardrail3-app-rs-family-selection", path = "family_selection" }
guardrail3_app_rs_placement = { package = "guardrail3-app-rs-placement", path = "placement" }
toml = "0.8"
