[package]
name = "guardrail3-app-topology-helpers"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
guardrail3_domain_report = { package = "guardrail3-domain-report", path = "../../domain/report" }
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../ports/outbound/traits" }
