[package]
name = "guardrail3-app-ts"
version = "0.0.0"
edition = "2024"

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
guardrail3_app_hexarch_helpers = { package = "guardrail3-app-hexarch-helpers", path = "../hexarch-helpers" }
guardrail3_app_core = { package = "guardrail3-app-core", path = "../core" }
guardrail3_domain_config = { package = "guardrail3-domain-config", path = "../../domain/config" }
guardrail3_domain_report = { package = "guardrail3-domain-report", path = "../../domain/report" }
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../ports/outbound/traits" }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
walkdir = "2"
