[package]
name = "guardrail3-domain-project-tree"
version = "0.0.0"
edition = "2024"

[dependencies]
garde = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
guardrail3_domain_project_tree_assertions = { package = "guardrail3-domain-project-tree-assertions", path = "assertions" }
