[package]
name = "release_workflow_fixture"
version = "0.1.0"
edition = "2024"
publish = true
description = "Release workflow fixture"
license = "MIT"
repository = "https://example.com/repo"
keywords = ["fixture"]
categories = ["development-tools"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = []
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
