[package]
name = "g3rs_fixture_l70_workspace"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = "1.0"
anyhow = "1.0"
camino = "1.1"
indexmap = "2.2"
itertools = "0.14"
once_cell = "1.19"
regex = "1.10"
semver = "1.0"
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
url = "2.5"
walkdir = "2.5"
bytes = "1.5"
chrono = "0.4"
time = "0.3"
uuid = "1.8"
glob = "0.3"
memchr = "2.7"
log = "0.4"
smallvec = "1.13"
hashbrown = "0.16"
parking_lot = "0.12"
strum = "0.27"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.10"

[lib]
path = "src/lib.rs"

[workspace]
members = [
  "crates/member_missing_lints",
  "crates/member_weakened",
  "crates/member_old",
  "crates/facade_missing",
  "crates/runtime",
  "crates/assertions",
  "crates/bulk_root",
  "crates/empty_default",
  "crates/bulk_deps/dep01",
  "crates/bulk_deps/dep02",
  "crates/bulk_deps/dep03",
  "crates/bulk_deps/dep04",
  "crates/bulk_deps/dep05",
  "crates/bulk_deps/dep06",
  "crates/bulk_deps/dep07",
  "crates/bulk_deps/dep08",
  "crates/bulk_deps/dep09",
  "crates/bulk_deps/dep10",
  "crates/bulk_deps/dep11",
  "crates/bulk_deps/dep12",
  "crates/bulk_deps/dep13",
]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
missing_docs_in_private_items = "deny"
module_name_repetitions = "deny"
must_use_candidate = "deny"
option_if_let_else = "deny"
empty_line_after_doc_comments = "deny"
single_match_else = "deny"
ref_option_ref = "deny"
trivially_copy_pass_by_ref = "deny"
multiple_crate_versions = "deny"
redundant_pub_crate = "allow"
