[package]
name = "guardrail3-rs"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
guardrail3-rs-app-types = { path = "../../../types/app-types" }
guardrail3-rs-validate-command = { path = "../../../logic/validate-command" }
guardrail3-rs-packages = { path = "../../outbound/packages" }
guardrail3-rs-report = { path = "../../outbound/report" }

[dev-dependencies]
g3rs-workspace-crawl.workspace = true
guardrail3-check-types.workspace = true

[lints]
workspace = true
