[package]
name = "guardrail3-adapters-inbound-cli"
version = "0.0.0"
edition = "2024"

[lib]
path = "mod.rs"

[lints]
workspace = true

[features]
default = [
    "product-rs-generate",
    "product-coverage-clippy",
    "product-coverage-deny",
]
product-rs-generate = ["dep:guardrail3_app_rs_generate", "dep:guardrail3_domain_config"]
product-ts = [
    "dep:guardrail3_app_ts",
    "dep:guardrail3_domain_config",
    "dep:guardrail3_domain_report",
    "dep:guardrail3_outbound_traits",
]
product-hooks = []
product-coverage-clippy = ["dep:guardrail3_app_rs_family_clippy"]
product-coverage-deny = ["dep:guardrail3_app_rs_family_deny"]

[dependencies]
clap = { version = "4", features = ["derive"] }
garde = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
guardrail3_adapters_outbound_fs = { package = "guardrail3-adapters-outbound-fs", path = "../../outbound/fs" }
guardrail3_app_commands = { package = "guardrail3-app-commands", path = "../../../app/commands" }
guardrail3_app_core = { package = "guardrail3-app-core", path = "../../../app/core" }
guardrail3_app_rs_family_clippy = { package = "guardrail3-app-rs-family-clippy", path = "../../../app/rs/families/clippy/crates/runtime", optional = true }
guardrail3_app_rs_family_deny = { package = "guardrail3-app-rs-family-deny", path = "../../../app/rs/families/deny/crates/runtime", optional = true }
guardrail3_app_rs_generate = { package = "guardrail3-app-rs-generate", path = "../../../app/rs/generate", optional = true }
guardrail3_app_ts = { package = "guardrail3-app-ts", path = "../../../app/ts", optional = true }
guardrail3_domain_config = { package = "guardrail3-domain-config", path = "../../../domain/config", optional = true }
guardrail3_domain_modules = { package = "guardrail3-domain-modules", path = "../../../domain/modules" }
guardrail3_domain_report = { package = "guardrail3-domain-report", path = "../../../domain/report", optional = true }
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../../ports/outbound/traits", optional = true }
guardrail3_shared_fs = { package = "guardrail3-shared-fs", path = "../../../shared/fs" }
guardrail3_validation_model = { package = "guardrail3-domain-validation-model", path = "../../../domain/validation-model" }
