[package]
name = "guardrail3-adapters-outbound-fs"
version = "0.0.0"
edition = "2024"

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
guardrail3_outbound_traits = { package = "guardrail3-ports-outbound-traits", path = "../../../ports/outbound/traits" }
guardrail3_shared_fs = { package = "guardrail3-shared-fs", path = "../../../shared/fs" }
